charts/all/hello-world/templates/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: hello-world
  name: hello-world
spec:
  replicas: 6
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        deploymentconfig: hello-world
      name: hello-world
    spec:
      containers:
      - name: apache
        image: registry.access.redhat.com/ubi8/httpd-24:1-226
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: hello-world-configmap
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: hello-world-configmap
        configMap:
          defaultMode: 438
          name: hello-world-configmap
